# news-pipeline

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
config/: app.yml  entity.yml  rss.yml  scorer.yml  scoring.yml  sinks.yml
data/: tickers.csv
infra/: docker-compose.yml
infra/clickhouse/: 001_news.sql  002_news_kafka_mv.sql
infra/grafana/dashboards/: dashboards.yml  finnews_overview.json
infra/grafana/datasources/: datasource.yml
proto/: news.proto  scorer.proto
scripts/: apply_clickhouse_sinks.sh  cpp_build.sh  dev_down.sh  dev_up.sh  gen_protos_py.sh  py_venv.sh
services/clean/include/: html_clean.h  kafka_consumer.h
services/clean/src/: html_clean.cpp  kafka_consumer.cpp  main.cpp
services/consumer/: main.py
services/entity/: main.py
services/entity/pb/: news_pb2.py
services/gw/include/: config.h  dedup.h  http_fetch.h  kafka_pub.h  rss_parser.h  url_norm.h  yahoo_html.h
services/gw/src/: config.cpp  dedup.cpp  http_fetch.cpp  kafka_pub.cpp  main.cpp  rss_parser.cpp  url_norm.cpp  yahoo_html.cpp
services/scorer/: export_onyx.py  model.py  server.py
services/scorer/pb/: scorer_pb2.py  scorer_pb2_grpc.py
services/sinks/: parquet_dump.py  redis_sink.py
services/webapi/: .env.example  package.json  tsconfig.json
services/webapi/dashboard/: index.html  package.json  tailwing.config.ts
services/webapi/dashboard/src/: App.tsx  main.tsx  styles.css
services/webapi/dashboard/src/components/: LiveTable.tsx  NavBar.tsx  StatCard.tsx  TickerFeed.tsx  TopMovers.tsx
services/webapi/dashboard/src/lib/: api.ts
services/webapi/src/: clickhouse.ts  config.ts  index.ts  kafka.ts  redisClient.ts  routes.ts  sse.ts
